Small alignment fix.

--- a/www/default.css
+++ b/www/default.css
@@ -199,6 +199,7 @@ body {
 }
 .small td,.large td {
 	padding:1px 0 1px 0;
+	vertical-align:top;
 }
 .small td.k1,.small td.k2,.small td.pos,.large td.k1,.large td.k2,.large td.k3,.large td.pos {
 	background-color:#E0E0E0;
